package com.voicenotes.utils.fileprovider;

import android.support.v4.content.FileProvider;

public class GenericFileProvider extends FileProvider {
}
