package com.voicenotes.view.utils.indexes;

public class LuceneConstants {

    public static final String CONTENTS = "contents";
    public static final String FILE_NAME = "filename";
    public static final String FILE_PATH = "filepath";
    public static final int MAX_SEARCH = 10;
}
